--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
 /**************Code for Ropa Sans Google Font*************/
 /* latin-ext */
 @font-face {
-  font-family: 'Ropa Sans';
+  font-family: 'Arial, Helvetica, sans-serif';
   font-style: normal;
   font-weight: 400;
   src: local('Ropa Sans'), local('RopaSans-Regular'), url(http://fonts.gstatic.com/s/ropasans/v5/Sr4SZjJG2shlLRwOkNqcEhJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
@@ -11,7 +11,7 @@
 }
 /* latin */
 @font-face {
-  font-family: 'Ropa Sans';
+  font-family: 'Arial, Helvetica, sans-serif';
   font-style: normal;
   font-weight: 400;
   src: local('Ropa Sans'), local('RopaSans-Regular'), url(http://fonts.gstatic.com/s/ropasans/v5/QnguTd82yEUxQZygH2gm8FtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
